--- a/AUF.EMR.MVC/Views/Masterlist/AdultDetails.cshtml
+++ b/AUF.EMR.MVC/Views/Masterlist/AdultDetails.cshtml
@@ -2,59 +2,56 @@
 
 @{
     ViewData["Title"] = "ChildDetails";
+    Layout = "Layouts/_MasterlistLayout";
 }
 
-<h1 class="text-xl font-bold text-gray-800 mb-4">Adult Details</h1>
 
-<div class="text-gray-800">
-    <h4>HouseholdMember</h4>
-    <hr/>
-    <dl class="row">
-        <dt class="col-sm-2 text-gray-800">
-            HH.NO/ Family Serial No.
-        </dt>
-        <dd class="col-sm-10">
-            @Model.HouseholdNo
-        </dd>
-        <dt class="col-sm-2">
-            Name
-        </dt>
-        <dd class="col-sm-10">
-            @Model.HouseholdMember.FullName
-        </dd>
-        <dt class="col-sm-2">
-            Address
-        </dt>
-        <dd class="col-sm-10">
-            @Model.HouseholdMember.Household.FullAddress
-        </dd>
-        <dt class="col-sm-2">
-            Sex
-        </dt>
-        <dd class="col-sm-10">
-            @Model.HouseholdMember.Sex
-        </dd>
-        <dt class="col-sm-2">
-            Age
-        </dt>
-        <dd class="col-sm-10">
-            @Model.HouseholdMember.Age
-        </dd>
-        <dt class="col-sm-2">
-            Date of Birth
-        </dt>
-        <dd class="col-sm-10">
-            @Model.HouseholdMember.Birthday
-        </dd>
-        <dt class="col-sm-2">
-            NHTS
-        </dt>
-        <dd class="col-sm-10">
-            @((Model.HouseholdMember.IsNhts) ? "NHTS" : "Non-NHTS")
-        </dd>
-    </dl>
-</div>
-<div>
-    <a asp-action="EditAdultInfo" asp-route-id="@Model.HouseholdMember.Id" asp-route-householdNo="@Model.HouseholdNo" asp-route-requestUrl="@Model.RequestUrl">Edit</a> |
-    <a href="@Model.RequestUrl">Back to List</a>
+<div class="container mx-auto py-8">
+
+    <div class="bg-white shadow-md rounded-lg p-8 mb-8">
+
+        <h1 class="text-xl font-bold text-gray-800 mb-4">Adult Details</h1>
+
+        <div class="text-gray-800">
+            <h4>Household Member</h4>
+            <hr class="mb-4"/>
+
+            <dl class="grid grid-cols-1">
+                <div class="flex flex-wrap">
+                    <dt class="w-1/3 md:w-1/4 text-gray-800 font-semibold">HH.NO/ Family Serial No.:</dt>
+                    <dd class="w-2/3 md:w-3/4 text-gray-900">@Html.DisplayFor(model => model.HouseholdNo)</dd>
+                </div>
+                <div class="flex flex-wrap">
+                    <dt class="w-1/3 md:w-1/4 text-gray-800 font-semibold">Name:</dt>
+                    <dd class="w-2/3 md:w-3/4 text-gray-900">@Html.DisplayFor(model => model.HouseholdMember.FullName)</dd>
+                </div>
+                <div class="flex flex-wrap">
+                    <dt class="w-1/3 md:w-1/4 text-gray-800 font-semibold">Address:</dt>
+                    <dd class="w-2/3 md:w-3/4 text-gray-900">@Html.DisplayFor(model => model.HouseholdMember.Household.FullAddress)</dd>
+                </div>
+                <div class="flex flex-wrap">
+                    <dt class="w-1/3 md:w-1/4 text-gray-800 font-semibold">Sex:</dt>
+                    <dd class="w-2/3 md:w-3/4 text-gray-900">@Html.DisplayFor(model => model.HouseholdMember.Sex)</dd>
+                </div>
+                <div class="flex flex-wrap">
+                    <dt class="w-1/3 md:w-1/4 text-gray-800 font-semibold">Age:</dt>
+                    <dd class="w-2/3 md:w-3/4 text-gray-900">@Html.DisplayFor(model => model.HouseholdMember.Age)</dd>
+                </div>
+                <div class="flex flex-wrap">
+                    <dt class="w-1/3 md:w-1/4 text-gray-800 font-semibold">Date of Birth:</dt>
+                    <dd class="w-2/3 md:w-3/4 text-gray-900">@Html.DisplayFor(model => model.HouseholdMember.Birthday)</dd>
+                </div>
+                <div class="flex flex-wrap">
+                    <dt class="w-1/3 md:w-1/4 text-gray-800 font-semibold">NHTS:</dt>
+                    <dd class="w-2/3 md:w-3/4 text-gray-900">@((Model.HouseholdMember.IsNhts) ? "NHTS" : "Non-NHTS")</dd>
+                </div>
+            </dl>
+        </div>
+
+        <div class="flex justify-end mt-8">
+            <a href="@Url.Action("EditAdultInfo", new { id = Model.HouseholdMember.Id, householdNo = Model.HouseholdNo, requestUrl = Model.RequestUrl })" class="focus:outline-none text-white bg-primary-50 font-medium rounded-lg text-sm px-5 py-2.5 me-2 mb-2 w-20 flex items-center justify-center">Edit</a>
+            <a href="@Model.RequestUrl" class="focus:outline-none text-white bg-red-400 hover:bg-red-450 font-medium rounded-lg text-sm px-5 py-2.5 me-2 mb-2">Back to List</a>
+        </div>
+
+    </div>
 </div>
