--- a/AUF.EMR.MVC/Views/Shared/Layouts/_MasterlistLayout.cshtml
+++ b/AUF.EMR.MVC/Views/Shared/Layouts/_MasterlistLayout.cshtml
@@ -6,8 +6,9 @@
     <title>@ViewData["Title"]</title>
     <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
     <link href="~/css/output.css" rel="stylesheet">
-    <link rel="stylesheet" href="~/lib/flowbite/dist/flowbite.css"/>
+    <link rel="stylesheet" href="~/lib/flowbite/dist/flowbite.css" />
     <link href="~/css/style-masterlist.css" rel="stylesheet">
+    <link href="~/lib/flaticon-uicons/css/all/all.css" rel="stylesheet" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 <body class="bg-slate-100">
