--- a/AUF.EMR.MVC/Views/FamilyPlanning/Index.cshtml
+++ b/AUF.EMR.MVC/Views/FamilyPlanning/Index.cshtml
@@ -10,13 +10,6 @@
         <h1 class="text-2xl font-bold mb-8">Family Planning Records</h1>
 
         <div class="flex justify-end space-x-2 mb-6">
-            <a asp-action="Generate" asp-route-householdNo="@Model.HouseholdNo" class="flex-shrink-0 inline-block bg-blue-500 hover:bg-blue-300 text-white font-medium py-2 px-4 rounded-lg transition duration-300 ease-in-out text-sm w-24">
-                <svg class="w-5 h-5 text-white inline-block mr-1" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor" viewBox="0 0 24 24">
-                    <path fill-rule="evenodd" d="M8 3a2 2 0 0 0-2 2v3h12V5a2 2 0 0 0-2-2H8Zm-3 7a2 2 0 0 0-2 2v5a2 2 0 0 0 2 2h1v-4a1 1 0 0 1 1-1h10a1 1 0 0 1 1 1v4h1a2 2 0 0 0 2-2v-5a2 2 0 0 0-2-2H5Zm4 11a1 1 0 0 1-1-1v-4h8v4a1 1 0 0 1-1 1H9Z" clip-rule="evenodd" />
-                </svg>
-                <span class="hidden md:inline font-medium">Print</span>
-            </a>
-
             <a asp-action="Create" asp-route-householdNo="@Model.HouseholdNo" class="text-white bg-primary-50 font-medium rounded-lg transition duration-300 ease-in-out text-sm px-4 py-2 hover:bg-green-300 flex-shrink-0 inline-block  text-white font-medium" aria-label="Add WRA">
                 <svg class="h-5 w-5 inline-block mr-1" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
                     <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 6v6m0 0v6m0-6h6m-6 0H6"></path>
@@ -37,9 +30,6 @@
                         @*  <th>
                         PhilhealthNo
                         </th> *@
-                        <th class="px-1 py-2 text-left">
-                            IsNHTS
-                        </th>
                         <th class="py-2 text-left">
                             ClientHouseholdMember
                         </th>
@@ -129,9 +119,6 @@
                         @Html.DisplayFor(modelItem => item.PhilhealthNo)
                         </td> *@
                             <td class="border-b border-gray-100 py-2 text-left">
-                                @Html.DisplayFor(modelItem => item.IsNHTS)
-                            </td>
-                            <td class="border-b border-gray-100 py-2 text-left">
                                 @Html.DisplayFor(modelItem => item.ClientHouseholdMember.Age)
                             </td>
                             <td class="border-b border-gray-100 py-2 text-left">
@@ -204,7 +191,8 @@
                         @Html.DisplayFor(modelItem => item.ModifiedById)
                         </td> *@
                             <td class="border-b border-gray-100 py-2 text-left inline-flex items-center text-center">
-                                <a asp-action="Edit" asp-route-id="@item.Id" class="text-yellow-300 hover:text-yellow-400 mr-2"><i class="fas fa-edit"></i></a>
+                                <a asp-action="Edit" asp-route-id="@item.Id" asp-route-householdNo="@Model.HouseholdNo" class="text-yellow-300 hover:text-yellow-400 mr-2"><i class="fas fa-edit"></i></a>
+                                <button type="button" onclick="print('Print', 'FamilyPlanning', @Model.HouseholdNo, @item.Id, @item.ClientHouseholdMemberId)">Print</button>
                                 <a asp-action="Details" asp-route-id="@item.Id" class="text-green-400 hover:text-green-500 mr-2"><i class="fas fa-eye"></i></a>
                                 <a asp-action="Delete" asp-route-id="@item.Id" asp-route-householdNo="@Model.HouseholdNo" class="text-red-300 hover:text-red-400">
                                     <button type="submit" class="text-red-500 hover:text-red-600 py-1 rounded-md"><i class="fas fa-trash-alt"></i></button>
@@ -217,3 +205,9 @@
         </div>
     </div>
 </div>
+
+@section Scripts {
+    @{
+        await Html.RenderPartialAsync("Prints/_PrintDialogWithId");
+    }
+}
