--- a/AUF.EMR.MVC/Views/FamilyPlanning/Create.cshtml
+++ b/AUF.EMR.MVC/Views/FamilyPlanning/Create.cshtml
@@ -627,6 +627,11 @@
                 <input asp-for="PhysicalExamination.UterineDepth" class="form-control" />
                 <span asp-validation-for="PhysicalExamination.UterineDepth" class="text-danger"></span>
             </div>
+            <div class="form-group">
+                <label asp-for="PhysicalExamination.UterineDepthSize" class="control-label"></label>
+                <input asp-for="PhysicalExamination.UterineDepthSize" class="form-control" />
+                <span asp-validation-for="PhysicalExamination.UterineDepthSize" class="text-danger"></span>
+            </div>
             <input type="hidden" asp-for="HouseholdNo" value="@Model.HouseholdNo" />
             <div class="form-group">
                 <input type="submit" value="Create" class="btn btn-primary" />
