--- a/AUF.EMR.MVC/Views/FamilyPlanning/Edit.cshtml
+++ b/AUF.EMR.MVC/Views/FamilyPlanning/Edit.cshtml
@@ -622,6 +622,11 @@
                 <span asp-validation-for="PhysicalExamination.UterineDepth" class="text-danger"></span>
             </div>
             <div class="form-group">
+                <label asp-for="PhysicalExamination.UterineDepthSize" class="control-label"></label>
+                <input asp-for="PhysicalExamination.UterineDepthSize" class="form-control" />
+                <span asp-validation-for="PhysicalExamination.UterineDepthSize" class="text-danger"></span>
+            </div>
+            <div class="form-group">
                 <input type="submit" value="Save" class="btn btn-primary" />
             </div>
         </form>
