--- a/AUF.EMR.MVC/Views/Dashboard/Barangay.cshtml
+++ b/AUF.EMR.MVC/Views/Dashboard/Barangay.cshtml
@@ -137,43 +137,16 @@
 
 <script src="https://cdn.jsdelivr.net/npm/apexcharts"></script>
 <script>
-    function data() {
-        return {
-            isSideMenuOpen: false,
-            toggleSideMenu() {
-                this.isSideMenuOpen = !this.isSideMenuOpen
-            },
-            closeSideMenu() {
-                this.isSideMenuOpen = false
-            },
-            isNotificationsMenuOpen: false,
-            toggleNotificationsMenu() {
-                this.isNotificationsMenuOpen = !this.isNotificationsMenuOpen
-            },
-            closeNotificationsMenu() {
-                this.isNotificationsMenuOpen = false
-            },
-            isProfileMenuOpen: false,
-            toggleProfileMenu() {
-                this.isProfileMenuOpen = !this.isProfileMenuOpen
-            },
-            closeProfileMenu() {
-                this.isProfileMenuOpen = false
-            },
-            isPagesMenuOpen: false,
-            togglePagesMenu() {
-                this.isPagesMenuOpen = !this.isPagesMenuOpen
-            },
-        }
-    }
-</script>
-<script>
     var chart = document.querySelector('#chartline')
     var options = {
         series: [{
-            name: 'TEAM A',
+            name: 'Household (Last Week)',
             type: 'area',
             data: [44, 55, 31, 47, 31, 43, 26, 41, 31, 47, 33]
+        }, {
+            name: 'Household (This Week)',
+            type: 'area',
+            data: [88, 67, 44, 58, 42, 56, 34, 53, 47, 60, 51]
         }],
         chart: {
             height: 350,
@@ -242,7 +215,6 @@
                         show: true,
                         label: 'Total',
                         formatter: function (w) {
-                            // By default this function returns the average of all series. The below is just an example to show the use of custom formatter function
                             return 249
                         }
                     }
