--- a/AUF.EMR.MVC/Views/Dashboard/Household.cshtml
+++ b/AUF.EMR.MVC/Views/Dashboard/Household.cshtml
@@ -1,14 +1,230 @@
 ﻿@model DashboardVM
 
 @{
+    Layout = "Layouts/_HouseholdLayout";
+    Layout = "Layouts/_FormLayout";
 
 }
 
-<p>Household Member #: @Model.HouseholdMemberCount</p>
-<p>Newborns #: @Model.NewbornCount</p>
-<p>Infant #: @Model.InfantCount</p>
-<p>Under Five #: @Model.UnderFiveCount</p>
-<p>School Aged #: @Model.SchoolAgedCount</p>
-<p>Adolescent #: @Model.AdolescentsCount</p>
-<p>Adult #: @Model.AdultCount</p>
-<p>Senior Citizen #: @Model.SeniorCount</p>
+<main class="mt-8 flex justify-center items-center">
+    <div class="mx-4">
+        <div class="grid grid-cols-12 gap-6">
+            <div class="col-span-12">
+                <h2 class="text-lg font-medium">Dashboard</h2>
+            </div>
+            <div class="col-span-12">
+                <div class="col-span-12 mt-5 flex flex-col lg:flex-row gap-2">
+                    <div class="bg-white shadow-lg p-4 flex-1" id="chartline"></div>
+                    <div class="bg-white shadow-lg p-4 flex-1" id="chartpie"></div>
+                </div>
+
+            </div>
+            <div class="col-span-12 grid grid-cols-7 sm:grid-cols-7 md:grid-cols-7 lg:grid-cols-7 xl:grid-cols-7 2xl:grid-cols-7 gap-2">
+                <a class="transform hover:scale-105 transition duration-300 shadow-xl rounded-lg" style="background-color: #6691C1" href="#">
+                    <div class="p-5">
+                        <div class="flex justify-between">
+                            <div class="rounded-full h-6 px-2 flex justify-items-center text-white font-semibold text-lg" style="background-color: #3C5C80">
+                                <span class="flex items-center" style="color: #DED7D7">N</span>
+                            </div>
+                        </div>
+                        <div class="ml-2 w-full flex-1">
+                            <div>
+                                <div class="mt-3 text-4xl font-semibold leading-8" style="color:#F7F6F6">17</div>
+                                <div class="mt-1 text-2xl text-gray-600" style="color:#F7F6F6">Newborn</div>
+                                <div class="mt-1 text-base text-gray-600" style="color:#F7F6F6">0 - 28 days</div>
+                            </div>
+                        </div>
+                    </div>
+                </a>
+                <a class="transform hover:scale-105 transition duration-300 shadow-xl rounded-lg" style="background-color: #AFCAFC" href="#">
+                    <div class="p-5">
+                        <div class="flex justify-between">
+                            <div class="rounded-full h-6 px-2 flex justify-items-center text-white font-semibold text-lg" style="background-color: #3C5C80">
+                                <span class="flex items-center" style="color: #DED7D7">I</span>
+                            </div>
+                        </div>
+                        <div class="ml-2 w-full flex-1">
+                            <div>
+                                <div class="mt-3 text-4xl font-semibold leading-8" style="color:#24384E">23</div>
+                                <div class="mt-1 text-2xl text-gray-600" style="color:#24384E">Infant</div>
+                                <div class="mt-1 text-base text-gray-600" style="color:#24384E">29 days - 11 mos. old</div>
+                            </div>
+                        </div>
+                    </div>
+                </a>
+                <a class="transform hover:scale-105 transition duration-300 shadow-xl rounded-lg" style="background-color: #D2E0FB" href="#">
+                    <div class="p-5">
+                        <div class="flex justify-between">
+                            <div class="rounded-full h-6 px-2 flex justify-items-center text-white font-semibold text-lg" style="background-color: #3C5C80">
+                                <span class="flex items-center" style="color: #DED7D7">U</span>
+                            </div>
+                        </div>
+                        <div class="ml-2 w-full flex-1">
+                            <div>
+                                <div class="mt-3 text-4xl font-semibold leading-8" style="color:#24384E">8</div>
+                                <div class="mt-1 text-2xl text-gray-600" style="color:#24384E">Under-five</div>
+                                <div class="mt-1 text-base text-gray-600" style="color:#24384E">1 - 4 years old</div>
+                            </div>
+                        </div>
+                    </div>
+                </a>
+                <a class="transform hover:scale-105 transition duration-300 shadow-xl rounded-lg" style="background-color: #E8E3C9" href="#">
+                    <div class="p-5">
+                        <div class="flex justify-between">
+                            <div class="rounded-full h-6 px-2 flex justify-items-center text-white font-semibold text-lg" style="background-color: #A49E83">
+                                <span class="flex items-center" style="color: #EEE9E9">S</span>
+                            </div>
+                        </div>
+                        <div class="ml-2 w-full flex-1">
+                            <div>
+                                <div class="mt-3 text-4xl font-semibold leading-8" style="color:#24384E">12</div>
+                                <div class="mt-1 text-2xl text-gray-600" style="color:#24384E">School-aged</div>
+                                <div class="mt-1 text-base text-gray-600" style="color:#24384E">5 - 9 years old</div>
+                            </div>
+                        </div>
+                    </div>
+                </a>
+                <a class="transform hover:scale-105 transition duration-300 shadow-xl rounded-lg" style="background-color: #D0ECB6" href="#">
+                    <div class="p-5">
+                        <div class="flex justify-between">
+                            <div class="rounded-full h-6 px-2 flex justify-items-center text-white font-semibold text-lg" style="background-color: #829D69">
+                                <span class="flex items-center" style="color: #EEE9E9">A</span>
+                            </div>
+                        </div>
+                        <div class="ml-2 w-full flex-1">
+                            <div>
+                                <div class="mt-3 text-4xl font-semibold leading-8" style="color:#24384E">15</div>
+                                <div class="mt-1 text-2xl text-gray-600" style="color:#24384E">Adolescents</div>
+                                <div class="mt-1 text-base text-gray-600" style="color:#24384E">10 - 19 years old</div>
+                            </div>
+                        </div>
+                    </div>
+                </a>
+                <a class="transform hover:scale-105 transition duration-300 shadow-xl rounded-lg" style="background-color: #BEE39B" href="#">
+                    <div class="p-5">
+                        <div class="flex justify-between">
+                            <div class="rounded-full h-6 px-2 flex justify-items-center text-white font-semibold text-lg" style="background-color: #829D69">
+                                <span class="flex items-center" style="color: #EEE9E9">AB</span>
+                            </div>
+                        </div>
+                        <div class="ml-2 w-full flex-1">
+                            <div>
+                                <div class="mt-3 text-4xl font-semibold leading-8" style="color:#24384E">30</div>
+                                <div class="mt-1 text-2xl text-gray-600" style="color:#24384E">Adult</div>
+                                <div class="mt-1 text-base text-gray-600" style="color:#24384E">25 - 59 years old</div>
+                            </div>
+                        </div>
+                    </div>
+                </a>
+                <a class="transform hover:scale-105 transition duration-300 shadow-xl rounded-lg" style="background-color: #ACCB8F" href="#">
+                    <div class="p-5">
+                        <div class="flex justify-between">
+                            <div class="rounded-full h-6 px-2 flex justify-items-center text-white font-semibold text-lg" style="background-color: #829D69">
+                                <span class="flex items-center" style="color: #EEE9E9">SC</span>
+                            </div>
+                        </div>
+                        <div class="ml-2 w-full flex-1">
+                            <div>
+                                <div class="mt-3 text-4xl font-semibold leading-8" style="color:#F7F6F6">23</div>
+                                <div class="mt-1 text-2xl text-gray-600" style="color:#F7F6F6">Senior C.</div>
+                                <div class="mt-1 text-base text-gray-600" style="color:#F7F6F6">60 yrs. old & above</div>
+                            </div>
+                        </div>
+                    </div>
+                </a>
+            </div>
+        </div>
+    </div>
+</main>
+
+<script src="https://cdn.jsdelivr.net/npm/apexcharts"></script>
+<script>
+    var chart = document.querySelector('#chartline')
+    var options = {
+        series: [{
+            name: 'Household (Last Week)',
+            type: 'area',
+            data: [44, 55, 31, 47, 31, 43, 26, 41, 31, 47, 33]
+        }, {
+            name: 'Household (This Week)',
+            type: 'area',
+            data: [88, 67, 44, 58, 42, 56, 34, 53, 47, 60, 51]
+        }],
+        chart: {
+            height: 350,
+            type: 'line',
+            zoom: {
+                enabled: false
+            }
+        },
+        stroke: {
+            curve: 'smooth'
+        },
+        fill: {
+            type: 'solid',
+            opacity: [0.35, 1],
+        },
+        labels: ['Dec 01', 'Dec 02', 'Dec 03', 'Dec 04', 'Dec 05', 'Dec 06', 'Dec 07', 'Dec 08', 'Dec 09 ', 'Dec 10', 'Dec 11'],
+        markers: {
+            size: 0
+        },
+        yaxis: [{
+            title: {
+                text: 'Series A',
+            },
+        },
+        {
+            opposite: true,
+            title: {
+                text: 'Series B',
+            },
+        },
+        ],
+        tooltip: {
+            shared: true,
+            intersect: false,
+            y: {
+                formatter: function (y) {
+                    if (typeof y !== "undefined") {
+                        return y.toFixed(0) + " points";
+                    }
+                    return y;
+                }
+            }
+        }
+    };
+    var chart = new ApexCharts(chart, options);
+    chart.render();
+</script>
+<script>
+    var chart = document.querySelector('#chartpie')
+    var options = {
+        series: [17, 23, 8, 12, 15, 30, 23],
+        chart: {
+            height: 300,
+            type: 'pie',
+        },
+        plotOptions: {
+            radialBar: {
+                dataLabels: {
+                    name: {
+                        fontSize: '22px',
+                    },
+                    value: {
+                        fontSize: '16px',
+                    },
+                    total: {
+                        show: true,
+                        label: 'Total',
+                        formatter: function (w) {
+                            return 249
+                        }
+                    }
+                }
+            }
+        },
+        labels: ['Newborn', 'Infant', 'Under-five', 'School-aged', 'Adolescents', 'Adult', 'Senior C.'],
+    };
+    var chart = new ApexCharts(chart, options);
+    chart.render();
+</script>
