Print patient records and fix edit vaccine appointments

--- a/AUF.EMR.MVC/Views/PatientRecord/Edit.cshtml
+++ b/AUF.EMR.MVC/Views/PatientRecord/Edit.cshtml
@@ -30,6 +30,11 @@
                         <span asp-validation-for="PatientRecord.BirthPlace" class="block mb-2 text-sm text-red-700"></span>
                     </div>
                     <div class="mb-4">
+                        <label asp-for="PatientRecord.Weight" class="block mb-2 text-sm font-medium text-gray-700">Weight</label>
+                        <input asp-for="PatientRecord.Weight" class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full md:w-4/5 p-2.5" />
+                        <span asp-validation-for="PatientRecord.Weight" class="block mb-2 text-sm text-red-700"></span>
+                    </div>
+                    <div class="mb-4">
                         <label asp-for="PatientRecord.MotherName" class="block mb-2 text-sm font-medium text-gray-700">Mother's Name</label>
                         <input asp-for="PatientRecord.MotherName" class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full md:w-4/5 p-2.5" />
                         <span asp-validation-for="PatientRecord.MotherName" class="block mb-2 text-sm text-red-700"></span>
