--- a/AUF.EMR.MVC/Views/PatientRecord/Details.cshtml
+++ b/AUF.EMR.MVC/Views/PatientRecord/Details.cshtml
@@ -125,7 +125,7 @@
                     {
                         <tr>
                             <td class="border-b border-gray-100 px-4 py-2">
-                                @Html.DisplayFor(modelItem => appointment.Patient.Patient.FormattedFullName)
+                                @Html.DisplayFor(modelItem => appointment.PatientRecord.Patient.FormattedFullName)
                             </td>
                             <td class="border-b border-gray-100 px-4 py-2">
                                 @Html.DisplayFor(modelItem => appointment.VaccinationDate)
