--- a/AUF.EMR.MVC/Views/VaccinationAppointment/Create.cshtml
+++ b/AUF.EMR.MVC/Views/VaccinationAppointment/Create.cshtml
@@ -1,7 +1,6 @@
 ﻿@model CreateVaccinationAppointmentVM
 
 @{
-    Layout = "Layouts/_HouseholdLayout";
     Layout = "Layouts/_FormLayout";
     ViewData["Title"] = "Create";
 }
@@ -10,9 +9,9 @@
     <div class="bg-white shadow-md rounded-lg p-8 mb-8">
         <form asp-action="Create">
             <div asp-validation-summary="ModelOnly" class="block mb-2 text-sm text-red-700"></div>
-            <input type="hidden" asp-for="Appointment.PatientId" value="@Model.PatientId" />
+            <input type="hidden" asp-for="Appointment.PatientRecordId" value="@Model.RecordId" />
             <input type="hidden" asp-for="HouseholdNo" value="@Model.HouseholdNo" />
-            <input type="hidden" asp-for="PatientId" value="@Model.PatientId" />
+            <input type="hidden" asp-for="RecordId" value="@Model.RecordId" />
             <h1 class="text-xl md:text-3xl font-bold text-gray-800 mb-4">Add Vaccination Appointment</h1>
             <hr class="mb-4">
             <div class="grid grid-cols-1 gap-12">
@@ -72,7 +71,7 @@
                 </div>
             </div>
             <div class="flex justify-end">
-                <a asp-action="Details" asp-controller="PatientRecord" asp-route-id="@Model.PatientId" asp-route-household="@Model.HouseholdNo" class="focus:outline-none text-white bg-red-400 font-medium rounded-lg text-sm px-5 py-2.5 me-2 mb-2 hover:bg-red-450 !important">Back</a>
+                <a asp-action="Details" asp-controller="PatientRecord" asp-route-id="@Model.RecordId" asp-route-household="@Model.HouseholdNo" class="focus:outline-none text-white bg-red-400 font-medium rounded-lg text-sm px-5 py-2.5 me-2 mb-2 hover:bg-red-450 !important">Back</a>
                 <button type="submit" class="focus:outline-none text-white bg-primary-50 font-medium rounded-lg text-sm px-5 py-2.5 me-2 mb-2">Add</button>
             </div>
         </form>
