--- a/AUF.EMR.MVC/Views/PatientRecord/Index.cshtml
+++ b/AUF.EMR.MVC/Views/PatientRecord/Index.cshtml
@@ -33,15 +33,15 @@
                 <thead>
                     <tr class="bg-gray-200">
                         <th class="px-4 py-2 text-left">Patient</th>
-                        <th class="px-4 py-2 text-left">BirthPlace</th>
-                        <th class="px-4 py-2 text-left">MotherName</th>
+                        <th class="px-4 py-2 text-left">Birthplace</th>
+                        <th class="px-4 py-2 text-left">Mother's Name</th>
                         @*<th class="px-4 py-2 text-left">MotherAge</th>*@
-                        <th class="px-4 py-2 text-left">MotherBirthday</th>
-                        <th class="px-4 py-2 text-left">FatherName</th>
+                        <th class="px-4 py-2 text-left">Mother's Birthday</th>
+                        <th class="px-4 py-2 text-left">Father's Name</th>
                         @*<th class="px-4 py-2 text-left">FatherAge</th>*@
-                        <th class="px-4 py-2 text-left">FatherBirthday</th>
-                        <th class="px-4 py-2 text-left">ContactNumber</th>
-                        <th class="px-4 py-2 text-left">TypeOfDelivery</th>
+                        <th class="px-4 py-2 text-left">Father's Birthday</th>
+                        <th class="px-4 py-2 text-left">Contact Number</th>
+                        <th class="px-4 py-2 text-left">Type Of Delivery</th>
                         <th class="px-4 py-2 text-left">Attended</th>
                         <th class="px-4 py-2 text-left"></th>
 
