--- a/AUF.EMR.MVC/Views/PregnancyRecord/Index.cshtml
+++ b/AUF.EMR.MVC/Views/PregnancyRecord/Index.cshtml
@@ -50,7 +50,7 @@
                             LMP
                         </th>
                         <th class="px-4 py-2 text-left">
-                            CellphoneNumber
+                            Contact Number
                         </th>
                         <th class="px-4 py-2 text-left">
                             EDC
