--- a/AUF.EMR.MVC/Views/PregnancyTracking/Index.cshtml
+++ b/AUF.EMR.MVC/Views/PregnancyTracking/Index.cshtml
@@ -109,7 +109,7 @@
                 <thead>
                     <tr class="bg-gray-200">
                         <th class="px-4 py-2 text-left">
-                            HouseholdMember
+                            Household Member
                         </th>
                         <th class="px-4 py-2 text-left">
                             Age
@@ -121,7 +121,7 @@
                             Parity
                         </th>
                         <th class="px-4 py-2 text-left">
-                            ExpectedDateOfDelivery
+                            Expected Date Of Delivery
                         </th>
                         @*  <th>
                         FirstAntenatalCheckUp
@@ -142,16 +142,16 @@
                         PostnatalCheckUp7days
                         </th> *@
                         <th class="px-4 py-2 text-left">
-                            LiveBirth
+                            Livebirth
                         </th>
                         <th class="px-4 py-2 text-left">
-                            MaternalDeath
+                            Maternal Death
                         </th>
                         <th class="px-4 py-2 text-left">
-                            StillBirth
+                            Stillbirth
                         </th>
                         <th class="px-4 py-2 text-left">
-                            EarlyNewbornDeath
+                            Early Newborn Death
                         </th>
                         <th class="px-4 py-2 text-left">
 
