--- a/AUF.EMR.MVC/Views/FamilyPlanning/Create.cshtml
+++ b/AUF.EMR.MVC/Views/FamilyPlanning/Create.cshtml
@@ -32,7 +32,8 @@
                     </div>
                     <br /> <hr class="w-full md:w-4/5" /> 
                     <div class="mb-2 mt-8">
-                        <h6 class="text-md font-bold text-gray-800">Personal Information</h6>
+                        <h6 class="text-md font-bold tex
+                        t-gray-800">Personal Information</h6>
                     </div>
                     <div class="mb-4">
                         <label asp-for="FPRecord.ClientAge" class="block mb-2 text-sm font-medium text-gray-700">Age</label>
