--- a/AUF.EMR.MVC/Views/Dashboard/Barangay.cshtml
+++ b/AUF.EMR.MVC/Views/Dashboard/Barangay.cshtml
@@ -27,7 +27,7 @@
                         </div>
                         <div class="ml-2 w-full flex-1">
                             <div>
-                                <div class="mt-3 text-4xl font-semibold leading-8" style="color:#F7F6F6">17</div>
+                                <div class="mt-3 text-4xl font-semibold leading-8" style="color:#F7F6F6">@Model.NewbornCount</div>
                                 <div class="mt-1 text-2xl text-gray-600" style="color:#F7F6F6">Newborn</div>
                                 <div class="mt-1 text-base text-gray-600" style="color:#F7F6F6">0 - 28 days</div>
                             </div>
@@ -43,7 +43,7 @@
                         </div>
                         <div class="ml-2 w-full flex-1">
                             <div>
-                                <div class="mt-3 text-4xl font-semibold leading-8" style="color:#24384E">23</div>
+                                <div class="mt-3 text-4xl font-semibold leading-8" style="color:#24384E">@Model.InfantCount</div>
                                 <div class="mt-1 text-2xl text-gray-600" style="color:#24384E">Infant</div>
                                 <div class="mt-1 text-base text-gray-600" style="color:#24384E">29 days - 11 mos. old</div>
                             </div>
@@ -59,7 +59,7 @@
                         </div>
                         <div class="ml-2 w-full flex-1">
                             <div>
-                                <div class="mt-3 text-4xl font-semibold leading-8" style="color:#24384E">8</div>
+                                <div class="mt-3 text-4xl font-semibold leading-8" style="color:#24384E">@Model.UnderFiveCount</div>
                                 <div class="mt-1 text-2xl text-gray-600" style="color:#24384E">Under-five</div>
                                 <div class="mt-1 text-base text-gray-600" style="color:#24384E">1 - 4 years old</div>
                             </div>
@@ -75,7 +75,7 @@
                         </div>
                         <div class="ml-2 w-full flex-1">
                             <div>
-                                <div class="mt-3 text-4xl font-semibold leading-8" style="color:#24384E">12</div>
+                                <div class="mt-3 text-4xl font-semibold leading-8" style="color:#24384E">@Model.SchoolAgedCount</div>
                                 <div class="mt-1 text-2xl text-gray-600" style="color:#24384E">School-aged</div>
                                 <div class="mt-1 text-base text-gray-600" style="color:#24384E">5 - 9 years old</div>
                             </div>
@@ -91,7 +91,7 @@
                         </div>
                         <div class="ml-2 w-full flex-1">
                             <div>
-                                <div class="mt-3 text-4xl font-semibold leading-8" style="color:#24384E">15</div>
+                                <div class="mt-3 text-4xl font-semibold leading-8" style="color:#24384E">@Model.AdolescentsCount</div>
                                 <div class="mt-1 text-2xl text-gray-600" style="color:#24384E">Adolescents</div>
                                 <div class="mt-1 text-base text-gray-600" style="color:#24384E">10 - 19 years old</div>
                             </div>
@@ -107,7 +107,7 @@
                         </div>
                         <div class="ml-2 w-full flex-1">
                             <div>
-                                <div class="mt-3 text-4xl font-semibold leading-8" style="color:#24384E">30</div>
+                                <div class="mt-3 text-4xl font-semibold leading-8" style="color:#24384E">@Model.AdultCount</div>
                                 <div class="mt-1 text-2xl text-gray-600" style="color:#24384E">Adult</div>
                                 <div class="mt-1 text-base text-gray-600" style="color:#24384E">25 - 59 years old</div>
                             </div>
@@ -123,7 +123,7 @@
                         </div>
                         <div class="ml-2 w-full flex-1">
                             <div>
-                                <div class="mt-3 text-4xl font-semibold leading-8" style="color:#F7F6F6">23</div>
+                                <div class="mt-3 text-4xl font-semibold leading-8" style="color:#F7F6F6">@Model.SeniorCount</div>
                                 <div class="mt-1 text-2xl text-gray-600" style="color:#F7F6F6">Senior C.</div>
                                 <div class="mt-1 text-base text-gray-600" style="color:#F7F6F6">60 yrs. old & above</div>
                             </div>
